New schedule policies added

--- a/delivery-date-time.liquid
+++ b/delivery-date-time.liquid
@@ -97,7 +97,9 @@
           ).getTime();
           var selected = new Date(dateText).getTime();
           var daySelected = new Date(dateText).getDay();
-          //console.log(daySelected);
+          // console.log('Selected day ' + daySelected);
+          // console.log('Selected ' + selected);
+          // console.log('Today ' + today);
 
           if (today > selected) {
             alert("fecha no válida");
@@ -106,18 +108,34 @@
             void 0;
             let minTime = "08:00 am";
             let maxTime = "7:00pm";
-            //console.log(daySelected);
 
-            // Setting Sunday out of service hour: 5:00pm
-            if (daySelected == 0) {
+            // Getting the difference in days
+            const diffTime = Math.abs(today - selected);
+            const diffDays = Math.ceil(diffTime / (1000 * 60 * 60 * 24));
+            // Comment next line on Prod Env (Just for testing!!!) 
+            // const diffDays = 1;
+            console.log(diffDays + " days");
+
+            // After 18h the minTime available is 10h
+            if (currentHour >= 18 && diffDays == 1) {
+              minTime = "10:00 am";
+            }
+
+            // On purchases from Saturday to Sunday the minTime available is 15h
+            if (daySelected == 0 && diffDays == 1) {
+              minTime = "3:00pm";
+            }
+
+            // Setting Saturday and Sunday out of service hour: 5:00pm
+            if (daySelected == 0 || daySelected == 6) {
               maxTime = "5:00pm";
             }
 
             let defaultTime = minTime.substring(0, 2);
 
             $(function () {
-              //console.log("fecha diferente de hoy");
-              //console.log(maxTime);
+              // console.log("fecha diferente de hoy");
+              // console.log(maxTime);
               $("#time").timepicker({
                 timeFormat: "h:mm p",
                 interval: 30,
@@ -153,16 +171,16 @@
               minTime = "05:00 pm";
             }
 
-            // Setting Sunday out of service hour: 5:00pm
-            if (daySelected == 0) {
+            // Setting Saturday and Sunday out of service hour: 5:00pm
+            if (daySelected == 0 || daySelected == 6) {
               maxTime = "5:00pm";
             }
 
             let defaultTime = minTime.substring(0, 2);
-            //console.log(minTime, defaultTime);
+            // console.log(minTime, defaultTime);
 
             $(function () {
-              //console.log("fecha diferente de hoy");
+              // console.log("fecha hoy");
               $("#time").timepicker({
                 timeFormat: "h:mm p",
                 interval: 30,
@@ -191,7 +209,7 @@
         }
       });
     });
-  });
+  });  
 </script>
 
 
